--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "react-simple-typewriter": "^5.0.1"
   },
   "devDependencies": {
+    "@svgr/rollup": "^8.1.0",
+    "@svgr/webpack": "^8.1.0",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
