--- a/package.json
+++ b/package.json
@@ -2,15 +2,14 @@
   "name": "website",
   "private": true,
   "version": "0.0.0",
-  "homepage": "https://ajuarezse.github.io/website/",
   "type": "module",
   "scripts": {
     "dev": "vite --open",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist"
+    "predeploy": "npm run build && cp CNAME docs/",
+    "deploy": "gh-pages -d docs"
   },
   "dependencies": {
     "prop-types": "^15.8.1",
@@ -21,7 +20,6 @@
   },
   "devDependencies": {
     "@svgr/rollup": "^8.1.0",
-    "@svgr/webpack": "^8.1.0",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
